--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@ionic/angular": "^6.0.0-rc.4",
+    "@swiper/core": "^0.0.21",
+    "@types/swiper": "^6.0.0",
+    "ngx-swiper-wrapper": "^10.0.0",
     "rxjs": "~7.5.0",
+    "swiper": "^8.2.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -26,6 +31,7 @@
     "@angular-devkit/build-angular": "^14.0.1",
     "@angular/cli": "~14.0.1",
     "@angular/compiler-cli": "^14.0.0",
+    "@ionic/angular-toolkit": "latest",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
